--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,16 @@
 {
   "presets": [
-    ["es2015", { "modules": false }]
+    ["env", { "modules": false }]
+  ],
+  "plugins": [
+    ["component",
+      [
+        {
+          "libraryName": "mint-ui",
+          "style": true
+        }
+      ]
+    ],
+    "transform-object-assign"
   ]
 }
