--- a/package.json
+++ b/package.json
@@ -1,28 +1,61 @@
 {
-  "name": "college_camp",
-  "description": "A Vue.js project",
-  "version": "1.0.0",
-  "author": "JAYWII",
+  "name": "m-template",
+  "description": "九机网移动端项目模板",
+  "author": "Jaywii",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --inline --host 0.0.0.0",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --fix --ext .js,.vue src",
+    "dev": "webpack-dev-server -d --inline --hot --env.dev",
+    "build": "rimraf dist && webpack -p --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.1.0",
-    "vue-resource": "^1.0.3",
-    "vue-router": "^2.1.1"
+    "es6-promise": "^4.1.0",
+    "vue": "^2.3.3",
+    "vue-router": "^2.5.3",
+    "vuex":"^2.3.1",
+    "mint-ui":"^2.2.7",
+    "axios":"^0.16.1",
+    "js-cookie":"^2.1.4",
+    "fastclick": "^1.0.6"
+  },
+  "engines": {
+    "node": ">=6"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "vue-loader": "^10.0.0",
-    "vue-template-compiler": "^2.1.0",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.9"
+    "autoprefixer": "^7.0.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-component": "^0.9.1",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-preset-env": "^1.5.2",
+    "css-loader": "^0.28.1",
+    "eslint": "^3.19.0",
+    "eslint-config-enough": "^0.2.6",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^2.0.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "file-loader": "^0.11.1",
+    "font-awesome": "^4.7.0",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "mockjs":"^1.0.1-beta3",
+    "openpack": "^1.0.0",
+    "postcss-loader": "^2.0.5",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.5",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^12.0.3",
+    "vue-template-compiler": "^2.3.3",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "2.4.5"
   }
 }
